--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
     <h2>Welcome to My Portfolio</h2>
     <p>I am Ayesha Azhar, currently pursuing my Bachelor's in Computer Science at Kinnaird College for Women, Lahore.</p>
     <p>As a first semester student, I am passionate about web development and eager to explore the world of technology.</p>
-    <img src="https://via.placeholder.com/200" alt="Ayesha Azhar">
+    <img src="image.jgp" alt="Ayesha Azhar">
     <p>This website showcases my academic journey, skills, and projects as I grow in the field of computer science.</p>
   </main>
 
@@ -36,4 +36,5 @@
     <p>&copy; 2025 Ayesha Azhar | Portfolio Website</p>
   </footer>
 </body>
+
 </html>
