--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,14 @@
     nav { background-color: #8e24aa; padding: 15px; text-align: center; }
     nav a { color: white; margin: 0 20px; text-decoration: none; font-weight: bold; }
     main { padding: 40px; text-align: center; }
-    img { width: 200px; border-radius: 50%; margin-top: 20px; }
+    img {
+      width: 250 px; 
+    height: 250 px;
+      border-radius: 50 %;
+      object-fit: cover;
+      border: 4 px solid #4CAF50;
+      
+    }
     footer { background-color: #6a1b9a; color: white; text-align: center; padding: 15px; margin-top: 40px; }
   </style>
 </head>
@@ -38,4 +45,5 @@
 </body>
 
 </html>
+
 
